--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,32 +4,35 @@
   <head>
     <%= yield :head %>
     <title><%= @title %></title>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>-->
+<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+   -->
   </head>
   
   <body>
     <div data-role="page">
     
-      <div data-role=„header">
+      <div data-role= "header" data-position="fixed">
           
          <%= render 'layouts/header' %>
           
       </div>
 
-      <div data-role=„content">
+      <div data-role="content">
         <% flash.each do |name, msg| %>
             <%= content_tag :div, msg, :id => "flash_#{name}" %>
         <% end %>
 
-            
+          <%= yield %> 
           <%= yield :scripts %> 
-          <%= yield %>
+          
       </div>
        
-      <div data-role=„footer">
+      <div data-role="footer" data-position="fixed">
         <%= render 'layouts/footer' %>
       </div>
     </div>
